# ba67-basic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  build.sh  get_dependencies.sh  install.sh  install_splash_screen.sh  readme.md  update.sh  vt_colors.service  vt_colors.sh
.github/workflows/: cmake-multi-platform.yml
examples/: char-editor.bas  chardef.bas  charedit.bas  color.bas  data.bas  keycodes.bas  module.bas  open.bas  play.bas  print using.bas  print40.bas  rchardef.bas  sprites.bas  test_math.bas
examples/101games/: LICENSE  bullfight.bas  diamond.bas
final_platform_layer/: final_platform_layer.h  readme.md
glad/: readme.md
glad/include/glad/: glad.h
glad/src/: glad.cpp
resources/: resource.rc
serial-io/: serial-io.cpp  serial-io.h  serial-posix.cpp  serial-posix.h  serial-web.cpp  serial-web.h  serial-win.cpp  serial-win.h
src/: .clang-format  abcmusic.cpp  abcmusic.h  about.cpp  about.h  basic.cpp  basic.h  cbm_rnd.cpp  cbm_rnd.h  charmap.cpp  charmap.h  control_characters.h  cpu-6502.cpp  cpu-6502.h  d64.cpp  d64.h  emoji.inc  error.h  fileptr.cpp  fileptr.h  font-bitmap-data.cpp  font-bitmap-data.h  font.cpp  font.h  help.cpp  help.h  help.inc  ipc.cpp  ipc.h  kernal.h  letters.inc  main.cpp  markdown_parser.cpp  markdown_parser.h  opengl_painter.cpp  opengl_painter.h  os.cpp  os.h  os_fpl.cpp  os_fpl.h  (+29 more)
test/: general.bas
web-app/: index.html  keyboard.css  keyboard.js  manifest.json  readme-pwa.md  shell.html  sw.js
www.ba67.org/: .htaccess  BA67.html  BA67.js  BA67.wasm  cloud.php  features.html  font.html  index.html  keyboard.css  menu.js  minifetchtest.js  minifetchtest.wasm  readme.html  readme.md  run.html  style.css  sw.js
www.ba67.org/cloud/: .htaccess  cloud.php
www.ba67.org/showdown/: showdown.md
